chore: fix image size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,5 +20,6 @@ nav a {
 }
 img {
     max-width: 1200px;
+    width: 100%;
     height: auto;
 }
